@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.10 2010/02/04 04:31:15 obache Exp $
+$NetBSD: distinfo,v 1.11 2011/02/18 23:56:48 shattered Exp $
 
-SHA1 (abook-0.5.6.tar.gz) = 79f04f2264c8bd81bbc952b6560c86d69b21615d
-RMD160 (abook-0.5.6.tar.gz) = e6a6e77fb7c8ba6608482b1103b948015c37b737
-Size (abook-0.5.6.tar.gz) = 393097 bytes
+SHA1 (abook-0.6.0pre2.tar.gz) = 42a939fba43e51aa011fa185113c12ec4bc1e1ec
+RMD160 (abook-0.6.0pre2.tar.gz) = 7b69dff4678e6deccc48ee3040f019c9a95463a9
+Size (abook-0.6.0pre2.tar.gz) = 411412 bytes
